--- a/Week2.ipynb
+++ b/Week2.ipynb
@@ -4,6 +4,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Bibek Raj Dangol\n",
+    "#### Presidential Graduate School, Kathmandu\n",
+    "#### PRG 330: Python Programming\n",
+    "#### Prof. Tek Raj Pant \n",
+    "#### November 3, 2024\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# For Loop"
    ]
   },
@@ -180,39 +191,615 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n"
+      "2500\n"
      ]
     }
    ],
    "source": [
-    "range_of_100 = range(1,10)\n",
     "sum = 0\n",
-    "for i in range(1,11,1):\n",
-    "    print(1)"
+    "for i in range (1,101,2):\n",
+    "    sum += i\n",
+    "print(sum)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Function "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Define a function \n",
+    "    # syntax\n",
+    "define function_name(parameters):\n",
+    "    # Block of code \n",
+    "    return expression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add (x, y):\n",
+    "    sum = x + y\n",
+    "    return sum\n",
+    "sum = add (5, 10)\n",
+    "print (sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add (x, y):\n",
+    "    sum = x + y\n",
+    "    return sum\n",
+    "sum = add (x= 5, y= 10)\n",
+    "print (sum)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "def multiply (x, y):\n",
+    "    product = x * y\n",
+    "    return product\n",
+    "product = multiply (5, 10)\n",
+    "print (product)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# write a function that accepts three operations (x, y, operation)\n",
+    "# based on the operation (+ - * /)\n",
+    "# perform addtion, subtract, multiply, division\n",
+    "# and then return the value of x operation y\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "-1\n",
+      "2\n",
+      "Denominator can be zero\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calculator (x, y, operation):\n",
+    "    if operation == '+':\n",
+    "        return x + y\n",
+    "    elif operation == '-':\n",
+    "        return x - y\n",
+    "    elif operation == '*':\n",
+    "        return x * y\n",
+    "    elif operation == '/':\n",
+    "        if y == 0:\n",
+    "            print (\"Denominator can be zero\")\n",
+    "            return \n",
+    "        else:\n",
+    "            return x/y\n",
+    "    else: \n",
+    "        print (\"Invalid operation\")\n",
+    "sum = calculator(1,2, '+')\n",
+    "print (sum)\n",
+    "diff = calculator(1,2, '-')\n",
+    "print (diff)\n",
+    "multiply = calculator(1,2, '*')\n",
+    "print (multiply)\n",
+    "divide = calculator( 1, 0,'/')\n",
+    "print (divide)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello, World!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def greet(name = \"World\"):\n",
+    "    print (f'hello, {name}!')\n",
+    "\n",
+    "greet()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello, connecting to 127.0.0.2!\n"
+     ]
+    }
+   ],
+   "source": [
+    "def connect (ip = \"127.0.0.1\"):\n",
+    "    print (f'hello, connecting to {ip}!')\n",
+    "connect(\"127.0.0.2\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "def sum (x = 1, y = 1):\n",
+    "    return x + y\n",
+    "add = sum ()\n",
+    "print (add)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Arbitrary Argument"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2\n",
+      "(3, 4, 5, 6)\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add (a, b, *args):\n",
+    "    print (a, b)\n",
+    "    print (args)\n",
+    "\n",
+    "a = add (1,2,3,4,5,6)\n",
+    "print (a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Return Statement"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number is even\n"
+     ]
+    }
+   ],
+   "source": [
+    "def is_even_number (number):\n",
+    "    if number %2 == 0:\n",
+    "        return 'Number is even'\n",
+    "       \n",
+    "    return 'Number is odd'\n",
+    "\n",
+    "check_number = is_even_number(4)\n",
+    "print (check_number)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lambda Function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "square = lambda x: x **2\n",
+    "print (square(4)) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Write a function to Check if a given number is a perfect square."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num = 4\n",
+    "def check_square(num):\n",
+    "    if (num ==1):\n",
+    "        return True\n",
+    "    check_not_square = False\n",
+    "    for i in range(1, 4/2):\n",
+    "        if i**i == num:\n",
+    "            check_not_square = True\n",
+    "            break\n",
+    "        return check_not_square"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Write a function to swap two numbers witout using a temporary variable."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "def swap_number(a,b):\n",
+    "    a = a + b\n",
+    "    b = a - b\n",
+    "    a = a - b\n",
+    "    return a, b\n",
+    "a, b = swap_number(a= 1, b= 2)\n",
+    "print (a, b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Write a function to Count the number of Vowel in a given string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count_vowels(sentence):\n",
+    "    total_vowel = 0\n",
+    "    vowel = \"aeiou\"\n",
+    "    for char in sentence:\n",
+    "        if char.lower() in vowel:\n",
+    "            total_vowel += 1\n",
+    "    return total_vowel\n",
+    "total_vowel = count_vowels(\"hello world\")\n",
+    "print(total_vowel)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# wriite a function to find out if the number is prime number or not"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def prime(n):\n",
+    "    is_prime = True \n",
+    "    for i in range(2, int(n/2)+1):\n",
+    "        if n %1 == 0:\n",
+    "            is_prime = False\n",
+    "            break\n",
+    "    return is_prime\n",
+    "    \n",
+    "print(prime(2))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Write a function Determine if a string is a palindrome (palindrome is if we reverse it has same value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello olleH\n",
+      "word is not palindrome\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = \"Hello\"\n",
+    "lenght = len(word)\n",
+    "counter = lenght -1 \n",
+    "reversed = ''\n",
+    "while counter >=0:\n",
+    "    reversed += word[counter]\n",
+    "    counter -= 1\n",
+    "print(word, reversed)\n",
+    "if reversed == word:\n",
+    "    print(\"word is palindrome\")\n",
+    "else:\n",
+    "    print(\"word is not palindrome\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Write a function to Find the second largest number in a list\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The second largest number is: 45\n"
+     ]
+    }
+   ],
+   "source": [
+    "def find_second_largest(numbers):\n",
+    "    return sorted(set(numbers))[-2]\n",
+    "\n",
+    "numbers = [10, 20, 4, 45, 99]\n",
+    "print(\"The second largest number is:\", find_second_largest(numbers))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Write a function Find the common elements between two lists."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 4, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [1, 2, 3, 4, 5]  \n",
+    "list2 = [1, 2, 4, 4, 5, 6] \n",
+    "common_element = []\n",
+    "for item1 in list1:\n",
+    "    for item2 in list2:\n",
+    "        if item1==item2:\n",
+    "            common_element.append(item1)\n",
+    "\n",
+    "print(common_element)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Write a function Count the occurrences of a specific character in a string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Count of P: 1\n",
+      "Count of m: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "s = 'Python Programming'\n",
+    "\n",
+    "c = s.count('i')\n",
+    "print('Count of P:', c)\n",
+    "\n",
+    "c = s.count('m')\n",
+    "print('Count of m:', c)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Write a function to remove duplicates from a list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list1 = [1, 2, 3, 3, 4, 4, 5, 5]\n",
+    "unique_numbers = []\n",
+    "for n in list1:\n",
+    "    if n  not in unique_numbers:\n",
+    "        unique_numbers.append(n)\n",
+    "\n",
+    "print(unique_numbers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#   Write a function that prints the multiplication table of given number"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 x 1 = 5\n",
+      "5 x 2 = 10\n",
+      "5 x 3 = 15\n",
+      "5 x 4 = 20\n",
+      "5 x 5 = 25\n",
+      "5 x 6 = 30\n",
+      "5 x 7 = 35\n",
+      "5 x 8 = 40\n",
+      "5 x 9 = 45\n",
+      "5 x 10 = 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 5\n",
+    "for i in range(1, 11):\n",
+    "   print(num, 'x', i, '=', num*i)"
+   ]
   }
  ],
  "metadata": {
